# Anki

./: .gitignore  README.md  config.json  main.py  pyproject.toml  ui_components.py
deck_packages/: Inflation.apkg  Spark.apkg
utils/: anki_connection_utils.py  api_utils.py  file_utils.py  text_preprocessing_utils.py
